fix: add css props to allow JS triggered scrolling on iOS

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -222,6 +222,11 @@ h1 {
     text-align: center;
   }
 
+  body {
+    overflow-y: scroll;
+    height: 100vh;
+  }
+
   h1 {
     font-size: 100px;
     margin-bottom: 100px;
@@ -265,6 +270,7 @@ h1 {
     flex-grow: 1;
     margin: 20px;
     scroll-snap-type: x mandatory;
+    margin-bottom: 120px;
   }
 
   .choice {
